# graphrag-wsl

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_ollama.py
src/: neo4j_client.py
